<resources>
    <string name="app_name">MobileDevelopmentCourseLabApp</string>
    <string name="title_article">Статья</string>
    <string name="title_list">Списиок</string>
    <string name="title_third">Третий</string>
    <string name="article_title">NVIDIA RTX 4080 SUPER в первых тестах 3DMark до 3% быстрее чем обычная RTX 4080 </string>
    <string name="article_author"> Виталий Гизатулин </string>
    <string name="article_date"> 1 февраля         Новости </string>
    <string name="article_text">Как выяснилось, NVIDIA задержала выпуск обзоров RTX 4080 SUPER из-за ошибки с выборкой Founders Edition. Карты поступили слишком поздно, чтобы дать рецензентам достаточно времени для тестирования. Поэтому дата обзоров была перенесена на 31 января. \n \n
RTX 4080 SUPER является важным продуктом для Китая, предоставляя доступную альтернативу более высококлассным картам, таким как RTX 4090D. Однако RTX 4090D дорог и имеет ограниченную поддержку разгона. RTX 4080 SUPER, с другой стороны, предлагает пользовательский дизайн без ограничений и более низкую цену по сравнению с оригинальной RTX 4080. \n
Рецензент из Гонконга под ником chaowanke опубликовал обзорное видео RTX 4080 SUPER, утверждая, что образец был приобретен самостоятельно и эмбарго на него, похоже, не распространяется. Тестирование карты проводилось на модели AX GAMING X3W белого цвета, предназначенной для китайского рынка. Тестирование основано на системе Core i7-14700K с 32 ГБ памяти DDR5-6000. Сравнивается с RTX 4090, 4080 и 4070 Ti SUPER, самыми близкими моделями в линейке RTX 40. \n
Тестирование показало, что RTX 4080 SUPER в синтетических тестах имеет небольшое преимущество в производительности - около 2,4% по сравнению с RTX 4080. Однако в игровых тестах RTX 4080 SUPER уступает RTX 4080 как на разрешении 2K, так и на 4K. Разница, возможно, обуславливается более высокой тактовой частотой модели Inno3D X3. \n
В целом, геймеры могут выбирать между RTX 4080 SUPER и RTX 4080, в зависимости от их предпочтений и предоставляемых предложений. RTX 4090 может быть предпочтительным выбором для тех, кто уделяет более высокую важность играм с разрешением 4K.</string>
    <string name="infotitle">infoTitle</string>
    <string name="frequency">frequency</string>
    <string name="frequenct">Частота</string>
    <string name="power">Питание</string>
    <string name="memory">Память</string>
    <string name="infoTitle">Информация</string>
    <string name="otherChatacters">Прочие характеристики</string>
    <string name="share">Поделиться</string>
    <string name="comments">Комментарии</string>
</resources>